--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,18 @@
 /**app.wxss**/
+
 .container {
   height: 100%;
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 200rpx 0;
   box-sizing: border-box;
-} 
+  background-color: #fff;
+  font-family: "PingFang SC",
+                 "Helvetica Neue",
+                 Arial,
+                 Helvetica,
+                 sans-serif,
+                 "Hiragino Sans GB",
+                 "Microsoft Yahei",
+                 STHeiti;
+}
