--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,1 +1,34 @@
 /* pages/home/home.wxss */
+.swiper{
+  height: 400rpx;
+  width: 100%;
+}
+.banner-item{
+  height: 100%;
+  width: 100%;
+}
+.banner-item image{
+  height: 100%;
+  width: 100%;
+}
+
+.theme{
+
+}
+
+.theme-title{
+  display: flex;
+  height: 60rpx;
+  color: rgb(224, 95, 35);
+  background-color: #fff;
+  font-size: 32rpx;
+  align-items: center;
+  justify-content: center;
+  margin: 20rpx 0;
+}
+
+.theme-body{
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+}
