--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,4 +1,7 @@
 /* pages/home/home.wxss */
+@import '../tpls/base.wxss';
+@import '../tpls/products/product-tpl.wxss';
+
 .swiper{
   height: 400rpx;
   width: 100%;
@@ -16,7 +19,7 @@
 
 }
 
-.theme-title{
+.theme-title,.products-title{
   display: flex;
   height: 60rpx;
   color: rgb(224, 95, 35);
@@ -31,4 +34,41 @@
   display: flex;
   flex-wrap: wrap;
   align-content: space-between;
+}
+.theme-item{
+  display: flex;
+  height:375rpx;
+  width: 50%;
+  border-bottom: 4rpx solid #fff;
+  position: relative;
+  box-sizing: border-box;
+}
+.theme-item:first-child{
+  border-right:4rpx solid #fff;
+}
+.theme-item.large{
+  width: 100%;
+}
+
+.theme-item.large .theme-icon view{
+  margin: 0 auto;
+  width: 150rpx;
+  height: 60rpx;
+  border-radius: 60rpx;
+  line-height: 60rpx;
+  border:1rpx solid #fff;
+  text-align: center;
+  font-size: 24rpx;
+}
+.theme-item image{
+  height: 100%;
+  width: 100%;
+}
+.theme-icon{
+  margin-top:10rpx;
+  height: 48rpx;
+}
+.theme-icon image{
+  height: 48rpx;
+  width: 48rpx;
 }
