--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <!--index.wxml-->
 <button type="primary" style='margin-top:20px' size='default' bindtap="getCode"> 获取code </button>
-<button type="warn" style='margin-top:20px' size='default' bindtap="checkLogin"> 检查登陆状态 </button>
+<button type="warn" style='margin-top:20px' size='default' bindtap="checkLogin"> 支付 </button>
 <view class="container">
   <view class="userinfo">
     <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
